Multiple style sheets and card details with styling

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
 <header class="header">
     <div class="header__title">
-        <span>Martin's Fish</span>
+        <img width = "150px" src="/images/martinscropped.png">
+        <!-- <span>Martin's Fish</span> -->
     </div>
     <nav class="header__nav">
         <div class="header__navitem">
@@ -24,10 +25,10 @@
 <main class="index">
     <article class="index__fishlist">
         <section class="index__fish">
-            <p class="index__fishname">Kit</p>
-            <img width = "200px" src="/images/catfish.jpg">
+            <p class="index__fishname">Marvin</p>
+            <img width = "200px" src="/images/catfish.jpg" class="fishImg">
             <div>
-                <button id="button--bart">Details</button>
+                <button id="button--bart" class="detailsButton">Details</button>
             </div>
         
             <dialog class="dialog--fish" id="details--bart">
@@ -41,9 +42,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Jimmy</p>
-            <img width = "200px" src="/images/jimmy.jpg">
+            <img width = "200px" src="/images/jimmyfixed.jpg" class="fishImg">
             <div>
-                <button id="button--jimmy">Details</button>
+                <button id="button--jimmy" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--jimmy">
                 <div>Species: Goldfish</div>
@@ -56,9 +57,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Flip</p>
-            <img width = "200px" src="/images/flip.jpg">
+            <img width = "200px" src="/images/flip.jpg" class="fishImg">
             <div>
-                <button id="button--flip">Details</button>
+                <button id="button--flip" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--flip">
                 <div>Species: Sea Turtle</div>
@@ -71,9 +72,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Slithers</p>
-            <img width = "200px" src="/images/eel.jpg">
+            <img width = "200px" src="/images/eelfixed.jpg" class="fishImg">
             <div>
-                <button id="button--slithers">Details</button>
+                <button id="button--slithers" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--slithers">
                 <div>Species: Moray Eel</div>
@@ -86,9 +87,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Chubbers</p>
-            <img width = "200px" src="/images/chubbers.webp">
+            <img width = "200px" src="/images/chubbers.webp" class="fishImg">
             <div>
-                <button id="button--chubbers">Details</button>
+                <button id="button--chubbers" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--chubbers">
                 <div>Species: Pufferfish</div>
@@ -101,9 +102,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Chad</p>
-            <img width = "200px" src="/images/flyfish.jpg">
+            <img width = "200px" src="/images/flyfish.jpg" class="fishImg">
             <div>
-                <button id="button--chad">Details</button>
+                <button id="button--chad" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--chad">
                 <div>Species: Fying Fish</div>
@@ -116,9 +117,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Susan</p>
-            <img width = "200px" src="/images/fish1.jpeg">
+            <img width = "200px" src="/images/fish1.jpeg" class="fishImg">
             <div>
-                <button id="button--susan">Details</button>
+                <button id="button--susan" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--susan">
                 <div>Species: Orange Clownfish</div>
@@ -131,9 +132,9 @@
         </section>
         <section class="index__fish">
             <p class="index__fishname">Alfredo</p>
-            <img width = "200px" src="/images/fish1.jpeg">
+            <img width = "200px" src="/images/fish1.jpeg" class="fishImg">
             <div>
-                <button id="button--alfredo">Details</button>
+                <button id="button--alfredo" class="detailsButton">Details</button>
             </div>
             <dialog class="dialog--fish" id="details--alfredo">
                 <div>Species: Orange Clownfish</div>
@@ -157,7 +158,7 @@
         </section>
         <section class="index__fishcleanitem">
             <p>Use cleaners that are safe for the fishies.</p>
-        </section>
+        </section><br>
         <img src="https://www.wikihow.pet/images/thumb/6/69/Clean-a-Fish-Tank-Step-6-Version-6.jpg/aid23944-v4-728px-Clean-a-Fish-Tank-Step-6-Version-6.jpg.webp" width="200px">
     </aside>
 </main>
