Edited dialogs to about me and updated + styled the footer

--- a/location.html
+++ b/location.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martin's Aquarium - Locations</title>
+    <title>Martin's Aquarium - Home </title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+<header class="header">
+    <div class="header__title">
+        <img width = "150px" src="/images/martinscropped.png">
+        <!-- <span>Martin's Fish</span> -->
+    </div>
+    <nav class="header__nav">
+        <div class="header__navitem">
+            <p><a href="index.html">Home</a></p>
+        </div>
+        <div class="header__navitem">
+            <p><a href="location.html">Fish Locations</a></p>
+        </div>
+    </nav>
+</header>
+<main class="index">
+    <article class="index__fishlist">
+        
+    </article>
+    <aside class="index__fishclean">
+    </aside>
+</main>
+<footer class="footer">
+    <div class="footeritem footerheader">Contact Martin:</div>
+    <div class="footeritem">martin@martinsaquarium.com</div>
+    <div class="footeritem">615-LUV-FISH</div>
+
+</footer>
+><script type="module" src="/scripts/main.js"></script>
 </body>
 </html>
