Location page styling

--- a/location.html
+++ b/location.html
@@ -11,7 +11,6 @@
 <header class="header">
     <div class="header__title">
         <img width = "150px" src="/images/martinscropped.png">
-        <!-- <span>Martin's Fish</span> -->
     </div>
     <nav class="header__nav">
         <div class="header__navitem">
@@ -22,12 +21,55 @@
         </div>
     </nav>
 </header>
-<main class="index">
-    <article class="index__fishlist">
+<main class="locationpage">
+    <header>
+        <div class="locationpage__header">Harvesting Locations</div>
+    </header>
+    <aside class="location__quotes">
         
-    </article>
-    <aside class="index__fishclean">
     </aside>
+    <article class="location__locations">
+        <section class="location">
+            <div class="location__header">Pacific Ocean</div>
+            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+        </section>
+        <section class="location">
+            <div class="location__header">Pacific Ocean</div>
+            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+        </section>
+        <section class="location">
+            <div class="location__header">Pacific Ocean</div>
+            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+        </section>
+        <section class="location">
+            <div class="location__header">Pacific Ocean</div>
+            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+        </section>
+        <section class="location">
+            <div class="location__header">Pacific Ocean</div>
+            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+            <div class="location__detail"></div>
+        </section>
+    </article>
 </main>
 <footer class="footer">
     <div class="footeritem footerheader">Contact Martin:</div>
