added automated fish creator based on js array of fish objects

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>
 <main class="index">
     <article class="index__fishlist">
-        <section class="index__fish">
+        <!-- <section class="index__fish">
             <p class="index__fishname">Marvin</p>
             <img width = "200px" src="/images/catfish.jpg" class="fishImg">
             <div>
@@ -152,7 +152,7 @@
         
                 <button class="button--close" id="close-alfredo">Close Dialog</button>
             </dialog>
-        </section>
+        </section> -->
     </article>
     <aside class="index__fishclean">
         <header class="fishclean__header">
