finished automatic location creator in javascript + styled the page slightly

--- a/location.html
+++ b/location.html
@@ -29,46 +29,7 @@
         
     </aside>
     <article class="location__locations">
-        <section class="location">
-            <div class="location__header">Pacific Ocean</div>
-            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-        </section>
-        <section class="location">
-            <div class="location__header">Pacific Ocean</div>
-            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-        </section>
-        <section class="location">
-            <div class="location__header">Pacific Ocean</div>
-            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-        </section>
-        <section class="location">
-            <div class="location__header">Pacific Ocean</div>
-            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-        </section>
-        <section class="location">
-            <div class="location__header">Pacific Ocean</div>
-            <div class="location__image"><img width = "600px" src="/images/pacific_ocean.jpg"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-            <div class="location__detail"></div>
-        </section>
+        
     </article>
 </main>
 <footer class="footer">
@@ -77,6 +38,6 @@
     <div class="footeritem">615-LUV-FISH</div>
 
 </footer>
-><script type="module" src="/scripts/main.js"></script>
+<script type="module" src="/scripts/Locations/main.js"></script>
 </body>
 </html>
